--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   <h3>Projects:</h3>
   <ul>
-    <li><a href="#" target="_blank">Coutdown Timer</a></li>
+    <li><a href="countdown-timer/index.html" target="_blank">Coutdown Timer</a></li>
     <li><a href="#" target="_blank">Quiz App</a></li>
     <li><a href="#" target="_blank">Recipe App</a></li>
     <li><a href="#" target="_blank">Notes App</a></li>
