--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <h3>Projects:</h3>
   <ul>
     <li><a href="countdown-timer/index.html" target="_blank">Coutdown Timer</a></li>
-    <li><a href="#" target="_blank">Quiz App</a></li>
+    <li><a href="quiz-app/index.html" target="_blank">Quiz App</a></li>
     <li><a href="#" target="_blank">Recipe App</a></li>
     <li><a href="#" target="_blank">Notes App</a></li>
     <li><a href="#" target="_blank">ToDo App</a></li>
