--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <li><a href="countdown-timer/index.html" target="_blank">Coutdown Timer</a></li>
     <li><a href="quiz-app/index.html" target="_blank">Quiz App</a></li>
     <li><a href="recipe-app/index.html" target="_blank">Recipe App</a></li>
-    <li><a href="#" target="_blank">Notes App</a></li>
+    <li><a href="notes-app/index.html" target="_blank">Notes App</a></li>
     <li><a href="#" target="_blank">ToDo App</a></li>
     <li><a href="#" target="_blank">Movies App</a></li>
     <li><a href="#" target="_blank">GitHub Profiles</a></li>
