--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <li><a href="recipe-app/index.html" target="_blank">Recipe App</a></li>
     <li><a href="notes-app/index.html" target="_blank">Notes App</a></li>
     <li><a href="todo-app/index.html" target="_blank">ToDo App</a></li>
-    <li><a href="#" target="_blank">Movies App</a></li>
+    <li><a href="movie-app/index.html" target="_blank">Movies App</a></li>
     <li><a href="#" target="_blank">GitHub Profiles</a></li>
     <li><a href="#" target="_blank">Drawing App</a></li>
     <li><a href="#" target="_blank">Password Generator</a></li>
