--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
     <li><a href="notes-app/index.html" target="_blank">Notes App</a></li>
     <li><a href="todo-app/index.html" target="_blank">ToDo App</a></li>
     <li><a href="movie-app/index.html" target="_blank">Movies App</a></li>
-    <li><a href="#" target="_blank">GitHub Profiles</a></li>
+    <li><a href="github-profiles/index.html" target="_blank">GitHub Profiles</a></li>
     <li><a href="#" target="_blank">Drawing App</a></li>
     <li><a href="#" target="_blank">Password Generator</a></li>
-    <li><a href="#" target="_blank">Weathe App</a></li>
+    <li><a href="#" target="_blank">Weather App</a></li>
   </ul>
   <footer>
     Built with 💜 by <a href="#" target="_blank">Alvaro Condori</a>. Code on <a
