--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <li><a href="todo-app/index.html" target="_blank">ToDo App</a></li>
     <li><a href="movie-app/index.html" target="_blank">Movies App</a></li>
     <li><a href="github-profiles/index.html" target="_blank">GitHub Profiles</a></li>
-    <li><a href="#" target="_blank">Drawing App</a></li>
+    <li><a href="drawing-app/index.html" target="_blank">Drawing App</a></li>
     <li><a href="#" target="_blank">Password Generator</a></li>
     <li><a href="#" target="_blank">Weather App</a></li>
   </ul>
