--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <li><a href="github-profiles/index.html" target="_blank">GitHub Profiles</a></li>
     <li><a href="drawing-app/index.html" target="_blank">Drawing App</a></li>
     <li><a href="password-generator/index.html" target="_blank">Password Generator</a></li>
-    <li><a href="#" target="_blank">Weather App</a></li>
+    <li><a href="weather-app/index.html" target="_blank">Weather App</a></li>
   </ul>
   <footer>
     Built with 💜 by <a href="#" target="_blank">Alvaro Condori</a>. Code on <a
